// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render simple timeline graph 1`] = `
<div>
  <div
    class="timelineContainer"
  >
    <div
      class="timelineContent"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
      >
        <div
          class="timelineDateContainer"
        >
          <p
            class="MuiTypography-root smallDate MuiTypography-body1 MuiTypography-alignCenter"
            data-testid="timeline-year-0"
          >
            2018
          </p>
          <div
            class="MuiTypography-root timelineDate MuiTypography-body1 MuiTypography-alignCenter"
            data-testid="timeline-date-0"
          >
            20 Apr
          </div>
        </div>
        <div
          class="timeline timelineStart"
        >
          <div
            class="notch"
          />
          <div
            class="MuiPaper-root timelinePaper MuiPaper-elevation6 MuiPaper-rounded"
            data-testid="timeline-item-0"
            id="0"
          >
            <div
              class="paperContent"
            >
              <div>
                Testing
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root lastItem MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
      >
        <div
          class="timelineDateContainer"
        >
          <p
            class="MuiTypography-root smallDate MuiTypography-body1 MuiTypography-alignCenter"
            data-testid="timeline-year-1"
          >
            2018
          </p>
          <div
            class="MuiTypography-root timelineDate MuiTypography-body1 MuiTypography-alignCenter"
            data-testid="timeline-date-1"
          >
            20 Apr
          </div>
        </div>
        <div
          class="timeline timelineEnd"
        >
          <div
            class="notch"
          />
          <div
            class="MuiPaper-root timelinePaper MuiPaper-elevation6 MuiPaper-rounded"
            data-testid="timeline-item-1"
            id="1"
          >
            <div
              class="paperContent"
            >
              <div>
                Testing
              </div>
              <div
                class="user"
              >
                <div
                  class="avatarIconContainer"
                  data-testid="avatar-icon"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root userButton MuiIconButton-colorInherit Mui-disabled Mui-disabled"
                    data-testid="timeline-avatar"
                    disabled=""
                    id="timeline-avatar"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root userAvatar"
                        data-testid="avatar-icon-avatar"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
                nsawas
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render simple timeline graph with time 1`] = `
<div>
  <div
    class="timelineContainer"
  >
    <div
      class="timelineContent"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
      >
        <div
          class="timelineDateContainer"
        >
          <p
            class="MuiTypography-root smallDate MuiTypography-body1 MuiTypography-alignCenter"
            data-testid="timeline-year-0"
          >
            2018
          </p>
          <div
            class="MuiTypography-root timelineDate MuiTypography-body1 MuiTypography-alignCenter"
            data-testid="timeline-date-0"
          >
            20 Apr
          </div>
          <p
            class="MuiTypography-root smallDate MuiTypography-body1 MuiTypography-alignCenter"
            data-testid="timeline-time-0"
          >
            16:20
          </p>
        </div>
        <div
          class="timeline timelineStart"
        >
          <div
            class="notch"
          />
          <div
            class="MuiPaper-root timelinePaper MuiPaper-elevation6 MuiPaper-rounded"
            data-testid="timeline-item-0"
            id="0"
          >
            <div
              class="paperContent"
            >
              <div>
                Testing
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root lastItem MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
      >
        <div
          class="timelineDateContainer"
        >
          <p
            class="MuiTypography-root smallDate MuiTypography-body1 MuiTypography-alignCenter"
            data-testid="timeline-year-1"
          >
            2018
          </p>
          <div
            class="MuiTypography-root timelineDate MuiTypography-body1 MuiTypography-alignCenter"
            data-testid="timeline-date-1"
          >
            20 Apr
          </div>
          <p
            class="MuiTypography-root smallDate MuiTypography-body1 MuiTypography-alignCenter"
            data-testid="timeline-time-1"
          >
            16:20
          </p>
        </div>
        <div
          class="timeline timelineEnd"
        >
          <div
            class="notch"
          />
          <div
            class="MuiPaper-root timelinePaper MuiPaper-elevation6 MuiPaper-rounded"
            data-testid="timeline-item-1"
            id="1"
          >
            <div
              class="paperContent"
            >
              <div>
                Testing
              </div>
              <div
                class="user"
              >
                <div
                  class="avatarIconContainer"
                  data-testid="avatar-icon"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root userButton MuiIconButton-colorInherit Mui-disabled Mui-disabled"
                    data-testid="timeline-avatar"
                    disabled=""
                    id="timeline-avatar"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root userAvatar"
                        data-testid="avatar-icon-avatar"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
                nsawas
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test selecting an item on the timeline card 1`] = `
<div>
  <div
    class="timelineContainer"
  >
    <div
      class="MuiPaper-root MuiCard-root timelineCard card MuiPaper-elevation6 MuiPaper-rounded"
      data-testid="card"
    >
      <div
        class="MuiCardContent-root"
        data-testid="card-body"
      >
        <div
          class="spinnerOverlay"
          data-is-active="false"
          data-testid="spinner-overlay"
        >
          <div
            class="loading"
          />
        </div>
        <div
          class="timelineContent"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
          >
            <div
              class="timelineDateContainer"
            >
              <p
                class="MuiTypography-root smallDate MuiTypography-body1 MuiTypography-alignCenter"
                data-testid="timeline-year-0"
              >
                2018
              </p>
              <div
                class="MuiTypography-root timelineDate MuiTypography-body1 MuiTypography-alignCenter"
                data-testid="timeline-date-0"
              >
                20 Apr
              </div>
            </div>
            <div
              class="timeline timelineStart"
            >
              <div
                class="notch"
              />
              <div
                class="MuiPaper-root timelinePaperButton MuiPaper-elevation6 MuiPaper-rounded"
                data-testid="timeline-item-0"
                id="0"
              >
                <div
                  class="paperContent"
                >
                  <div>
                    Testing
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root lastItem MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
          >
            <div
              class="timelineDateContainer"
            >
              <p
                class="MuiTypography-root smallDate MuiTypography-body1 MuiTypography-alignCenter"
                data-testid="timeline-year-1"
              >
                2018
              </p>
              <div
                class="MuiTypography-root timelineDate MuiTypography-body1 MuiTypography-alignCenter"
                data-testid="timeline-date-1"
              >
                20 Apr
              </div>
            </div>
            <div
              class="timeline timelineEnd"
            >
              <div
                class="notch"
              />
              <div
                class="MuiPaper-root timelinePaperButton MuiPaper-elevation6 MuiPaper-rounded"
                data-testid="timeline-item-1"
                id="1"
              >
                <div
                  class="paperContent"
                >
                  <div>
                    Testing
                  </div>
                  <div
                    class="user"
                  >
                    <div
                      class="avatarIconContainer"
                      data-testid="avatar-icon"
                    >
                      <button
                        class="MuiButtonBase-root MuiIconButton-root userButton MuiIconButton-colorInherit Mui-disabled Mui-disabled"
                        data-testid="timeline-avatar"
                        disabled=""
                        id="timeline-avatar"
                        tabindex="-1"
                        type="button"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root userAvatar"
                            data-testid="avatar-icon-avatar"
                            focusable="false"
                            role="presentation"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                    nsawas
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test tabbed timeline cartd 1`] = `
<div>
  <div
    class="timelineContainer"
  >
    <div
      class="MuiPaper-root MuiCard-root timelineCard card MuiPaper-elevation6 MuiPaper-rounded"
      data-testid="card"
    >
      <div
        class="MuiCardContent-root timelineCardBody"
        data-testid="card-body"
      >
        <div
          class="MuiPaper-root MuiCard-root tabsWrapper MuiPaper-elevation1"
        >
          <div
            class="MuiTabs-root tabs"
            data-testid="card-tabs"
          >
            <div
              class="MuiTabs-scroller MuiTabs-fixed"
              style="overflow: hidden;"
            >
              <div
                class="MuiTabs-flexContainer tabsContainer"
                role="tablist"
              >
                <button
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected MuiTab-fullWidth"
                  data-testid="timeline-tab-tabOne"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    Tab One
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <button
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary MuiTab-fullWidth"
                  data-testid="timeline-tab-tabTwo"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    Tab Two
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
              <span
                class="PrivateTabIndicator-root-419 PrivateTabIndicator-colorPrimary-420 MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
          </div>
        </div>
        <div
          class="timelineContent"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
          >
            <div
              class="timelineDateContainer"
            >
              <p
                class="MuiTypography-root smallDate MuiTypography-body1 MuiTypography-alignCenter"
                data-testid="timeline-year-0"
              >
                2018
              </p>
              <div
                class="MuiTypography-root timelineDate MuiTypography-body1 MuiTypography-alignCenter"
                data-testid="timeline-date-0"
              >
                20 Apr
              </div>
            </div>
            <div
              class="timeline timelineStart"
            >
              <div
                class="notch"
              />
              <div
                class="MuiPaper-root timelinePaper MuiPaper-elevation6 MuiPaper-rounded"
                data-testid="timeline-item-0"
                id="0"
              >
                <div
                  class="paperContent"
                >
                  <div>
                    Testing
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root lastItem MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
          >
            <div
              class="timelineDateContainer"
            >
              <p
                class="MuiTypography-root smallDate MuiTypography-body1 MuiTypography-alignCenter"
                data-testid="timeline-year-1"
              >
                2018
              </p>
              <div
                class="MuiTypography-root timelineDate MuiTypography-body1 MuiTypography-alignCenter"
                data-testid="timeline-date-1"
              >
                20 Apr
              </div>
            </div>
            <div
              class="timeline timelineEnd"
            >
              <div
                class="notch"
              />
              <div
                class="MuiPaper-root timelinePaper MuiPaper-elevation6 MuiPaper-rounded"
                data-testid="timeline-item-1"
                id="1"
              >
                <div
                  class="paperContent"
                >
                  <div>
                    Testing
                  </div>
                  <div
                    class="user"
                  >
                    <div
                      class="avatarIconContainer"
                      data-testid="avatar-icon"
                    >
                      <button
                        class="MuiButtonBase-root MuiIconButton-root userButton MuiIconButton-colorInherit Mui-disabled Mui-disabled"
                        data-testid="timeline-avatar"
                        disabled=""
                        id="timeline-avatar"
                        tabindex="-1"
                        type="button"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root userAvatar"
                            data-testid="avatar-icon-avatar"
                            focusable="false"
                            role="presentation"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                    nsawas
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test unselecting an item on the timeline card 1`] = `
<div>
  <div
    class="timelineContainer naji"
  >
    <div
      class="MuiPaper-root MuiCard-root timelineCard card MuiPaper-elevation6 MuiPaper-rounded"
      data-testid="card"
    >
      <div
        class="MuiCardContent-root"
        data-testid="card-body"
      >
        <div
          class="spinnerOverlay"
          data-is-active="false"
          data-testid="spinner-overlay"
        >
          <div
            class="loading"
          />
        </div>
        <div
          class="timelineContent"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
          >
            <div
              class="timelineDateContainer"
            >
              <p
                class="MuiTypography-root smallDate MuiTypography-body1 MuiTypography-alignCenter"
                data-testid="timeline-year-0"
              >
                2018
              </p>
              <div
                class="MuiTypography-root timelineDate MuiTypography-body1 MuiTypography-alignCenter"
                data-testid="timeline-date-0"
              >
                20 Apr
                <div
                  data-testid="timeline-day-0"
                >
                  Fri
                </div>
              </div>
            </div>
            <div
              class="timeline timelineStart"
            >
              <div
                class="notch selected"
              />
              <div
                class="MuiPaper-root timelinePaperButton timelinePaperSelected MuiPaper-elevation4 MuiPaper-rounded"
                data-testid="timeline-item-0"
                id="0"
              >
                <div
                  class="paperContent"
                >
                  <div>
                    Testing
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root lastItem MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
          >
            <div
              class="timelineDateContainer"
            >
              <p
                class="MuiTypography-root smallDate MuiTypography-body1 MuiTypography-alignCenter"
                data-testid="timeline-year-1"
              >
                2018
              </p>
              <div
                class="MuiTypography-root timelineDate MuiTypography-body1 MuiTypography-alignCenter"
                data-testid="timeline-date-1"
              >
                20 Apr
                <div
                  data-testid="timeline-day-1"
                >
                  Fri
                </div>
              </div>
            </div>
            <div
              class="timeline timelineEnd"
            >
              <div
                class="notch"
              />
              <div
                class="MuiPaper-root timelinePaperButton MuiPaper-elevation6 MuiPaper-rounded"
                data-testid="timeline-item-1"
                id="1"
              >
                <div
                  class="paperContent"
                >
                  <div>
                    Testing
                  </div>
                  <div
                    class="user"
                  >
                    <div
                      class="avatarIconContainer"
                      data-testid="avatar-icon"
                    >
                      <button
                        class="MuiButtonBase-root MuiIconButton-root userButton MuiIconButton-colorInherit Mui-disabled Mui-disabled"
                        data-testid="timeline-avatar"
                        disabled=""
                        id="timeline-avatar"
                        tabindex="-1"
                        type="button"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root userAvatar"
                            data-testid="avatar-icon-avatar"
                            focusable="false"
                            role="presentation"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                    nsawas
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
